--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,168 @@
-body {
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+  background-color: #EEEEEE;
 }
+
+.pokemons-list {
+  padding: 1rem;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+  gap: 1rem;
+  text-align: center;
+}
+
+.pokemon {
+  padding: 1rem;
+  flex: 1;
+  background-color: white;
+  border-radius: 6px;
+  cursor: pointer;
+}
+
+.pokemon:hover {
+  box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
+}
+
+.pokemon p {
+  font-size: 1.2rem;
+}
+
+.pokemon a {
+  text-decoration: none;
+  color: black;
+}
+
+.load-more {
+  background-color: tomato;
+  padding: 1rem;
+  border-radius: 6px;
+  border: none;
+  cursor: pointer;
+  color: white;
+  font-size: 1rem;
+}
+
+.load-more:hover {
+  box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
+  
+}
+
+.navbar {
+  display: flex;
+  justify-content: space-between;
+  background-color: tomato;
+  align-items: center;
+  padding: 1.2rem 3rem;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 3px 10px;
+}
+
+.navbar a {
+  text-decoration: none;
+  color: white;
+  font-size: 1.5rem;
+}
+
+.logo, .my-pokemon {
+  cursor: pointer;
+}
+
+.pokemon-details {
+  padding: 1rem;
+}
+
+.card, .stats-container, .moves-container  {
+  background-color: white;
+  margin-top: 1rem;
+  padding: 1.5rem 1rem;
+  border-radius: 6px;
+  
+}
+
+.card, .pokemon-overview {
+  display: flex;
+}
+
+.pokemon-overview {
+  padding-bottom: 1rem;
+  border-bottom: 2px solid rgb(182, 182, 182);
+}
+
+.pokemon-avatar {
+  height: 200px;
+  width: 200px;
+}
+
+.pokemon-avatar img {
+  width: 100%;
+}
+
+.card {
+  flex-direction: column;
+}
+
+.pokemon-info {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between  ;
+}
+
+.pokemon-info label {
+  font-size: 1.2rem;
+}
+
+.pokemon-info p {
+  font-size: 1.5rem;
+  
+}
+
+.pokemon-types {
+  padding-top: 1rem;
+}
+
+.pokemon-types h3 {
+  padding-bottom: 1rem;
+}
+
+.pokemon-type {
+  display: inline;
+  padding: .4rem 1.2rem;
+  background-color: #5684c9;
+  border-radius: 6px;
+  color: white;
+  margin-right: 4px;
+}
+
+.stats {
+  display: flex;
+  padding: .5rem 0;
+}
+
+.stats label {
+  font-size: 1.1rem;
+}
+
+.stat {
+  flex: 1;
+}
+
+.header{
+  font-size: 1.5rem;
+  margin-bottom: .5rem;
+}
+
+.hr {
+  font-weight: bold;
+  font-size: 1.1rem;
+}
+
+.moves-content {
+  font-size: 1.1rem;
+}
+
+
+
